// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getCliOptions shows "bump" command help text 1`] = `
"Usage: beachball bump [options]

Bump versions and generate changelogs, but don't commit or publish

Options:
  --[no-]bump-deps            bump packages that depend on changed packages (default: true)
  --prerelease-prefix <value> prerelease prefix for packages that will receive a prerelease bump
  --[no-]keep-change-files    don't delete the change files from disk after bumping

Change detection options:
  -b, --branch <value>        target branch from remote (default: the default remote branch)
  --since <value>             consider change files since this git ref (branch name, commit SHA)
  --[no-]fetch                fetch from the remote before determining changes (default: true)
  --depth <num>               for shallow clones: depth of git history to consider when fetching

Package filtering options:
  --scope <value...>          only consider package paths matching the pattern(s) (supports
                                "!negations")

Validation options:
  --disallowed-change-types <value...> - change types that are not allowed (choices: "none",
                                "prerelease", "prepatch", "patch", "preminor", "minor", "premajor",
                                "major")

Advanced options:
  --change-dir <value>        directory name or path to store change files (default: "change")
  --concurrency <num>         maximum concurrency for write operations (hook calls, npm publish,
                                default: 1)

Common options:
  -c, --config <value>        custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose              print additional information to the console
  -h, --help                  display help for command
"
`;

exports[`getCliOptions shows "canary" command help text 1`] = `
"Usage: beachball canary [options]

Publish prerelease versions of changed or all packages without committing

Options:
  --canary-name <value>       dist-tag and version name to use for canary publishes

Change detection options:
  -b, --branch <value>        target branch from remote (default: the default remote branch)
  --since <value>             consider change files since this git ref (branch name, commit SHA)
  --[no-]fetch                fetch from the remote before determining changes (default: true)
  --depth <num>               for shallow clones: depth of git history to consider when fetching

Package filtering options:
  --scope <value...>          only consider package paths matching the pattern(s) (supports
                                "!negations")
  --[no-]all                  publish prerelease versions of all packages (default: false)

Validation options:
  --disallowed-change-types <value...> - change types that are not allowed (choices: "none",
                                "prerelease", "prepatch", "patch", "preminor", "minor", "premajor",
                                "major")

npm options:
  -r, --registry <value>      npm registry (default: "https://registry.npmjs.org/")
  -n, --token <value>         npm auth token (prefer using NPM_TOKEN environment variable)
  -a, --auth-type <value>     npm auth type for NPM_TOKEN (choices: "authtoken", "password",
                                default: "authtoken")
  --npm-read-concurrency <num> - maximum concurrency for reading package versions from the registry
                                (default: 2)
  --timeout <num>             timeout in ms for npm operations (other than install)
  -t, --tag <value>           npm dist-tag for publishing (default: canaryName or "canary")
  --access <value>            npm publish access level (choices: "public", "restricted", default:
                                "restricted")
  --retries <num>             number of retries for an npm publish before failing (default: 3)
  --pack-to-path <value>      pack packages to tgz files under this path instead of publishing to
                                npm

Advanced options:
  --change-dir <value>        directory name or path to store change files (default: "change")
  --concurrency <num>         maximum concurrency for write operations (hook calls, npm publish,
                                default: 1)

Common options:
  -c, --config <value>        custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose              print additional information to the console
  -h, --help                  display help for command
"
`;

exports[`getCliOptions shows "change" command help text 1`] = `
"Usage: beachball change [options]

Create change files for this branch

Options:
  -m, --message <value>       the change description
  --type <value>              type of change (instead of prompting) (choices: "none", "prerelease",
                                "prepatch", "patch", "preminor", "minor", "premajor", "major")
  -p, --package <value...>    force creating a change file for the specified package(s)
  --[no-]commit               commit change files after "change" (default: true)
  --dependent-change-type <value> - change type to use for dependent packages (default: patch)
                                (choices: "none", "prerelease", "prepatch", "patch", "preminor",
                                "minor", "premajor", "major")

Change detection options:
  -b, --branch <value>        target branch from remote (default: the default remote branch)
  --since <value>             consider changes since this git ref (branch name, commit SHA)
  --[no-]fetch                fetch from the remote before determining changes (default: true)
  --depth <num>               for shallow clones: depth of git history to consider when fetching

Package filtering options:
  --scope <value...>          only consider package paths matching the pattern(s) (supports
                                "!negations")
  --[no-]all                  generate change files for all packages (default: false)

Validation options:
  --disallowed-change-types <value...> - change types that are not allowed (choices: "none",
                                "prerelease", "prepatch", "patch", "preminor", "minor", "premajor",
                                "major")
  --[no-]disallow-deleted-change-files - verify that no change files were deleted between head and
                                target branch

Advanced options:
  --change-dir <value>        directory name or path to store change files (default: "change")

Common options:
  -c, --config <value>        custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose              print additional information to the console
  -h, --help                  display help for command
"
`;

exports[`getCliOptions shows "check" command help text 1`] = `
"Usage: beachball check [options]

Check whether a change file is needed for this branch

Options:
  --changehint <value>        customized hint message shown when a change file is needed but missing
                                (default: "Run \\"beachball change\\" to create a change file")

Change detection options:
  -b, --branch <value>        target branch from remote (default: the default remote branch)
  --since <value>             consider changes since this git ref (branch name, commit SHA)
  --[no-]fetch                fetch from the remote before determining changes (default: true)
  --depth <num>               for shallow clones: depth of git history to consider when fetching

Package filtering options:
  --scope <value...>          only consider package paths matching the pattern(s) (supports
                                "!negations")

Validation options:
  --disallowed-change-types <value...> - change types that are not allowed (choices: "none",
                                "prerelease", "prepatch", "patch", "preminor", "minor", "premajor",
                                "major")
  --[no-]disallow-deleted-change-files - verify that no change files were deleted between head and
                                target branch

Advanced options:
  --change-dir <value>        directory name or path to store change files (default: "change")

Common options:
  -c, --config <value>        custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose              print additional information to the console
  -h, --help                  display help for command
"
`;

exports[`getCliOptions shows "config get" command help text 1`] = `
"Usage: beachball config get [options] <name>

Get the value of a config setting (with any overrides)

Arguments:
  name                  beachball config setting name

Common options:
  -c, --config <value>  custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose        print additional information to the console
  -h, --help            display help for command
"
`;

exports[`getCliOptions shows "config list" command help text 1`] = `
"Usage: beachball config list [options]

List all config settings (with any overrides)

Common options:
  -c, --config <value>  custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose        print additional information to the console
  -h, --help            display help for command
"
`;

exports[`getCliOptions shows "config" command help text 1`] = `
"Usage: beachball config <get|list>

Get or list config settings (requires a sub-command)

Commands:
  get <name>            Get the value of a config setting (with any overrides)
  list                  List all config settings (with any overrides)
  help [command]        display help for command

Common options:
  -c, --config <value>  custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose        print additional information to the console
  -h, --help            display help for command
"
`;

exports[`getCliOptions shows "init" command help text 1`] = `
"Usage: beachball init [options]

Initialize a new beachball config file in the current directory

npm options:
  -r, --registry <value>      npm registry (default: "https://registry.npmjs.org/")
  -n, --token <value>         npm auth token (prefer using NPM_TOKEN environment variable)
  -a, --auth-type <value>     npm auth type for NPM_TOKEN (choices: "authtoken", "password",
                                default: "authtoken")
  --npm-read-concurrency <num> - maximum concurrency for reading package versions from the registry
                                (default: 2)
  --timeout <num>             timeout in ms for npm operations (other than install)

Common options:
  --[no-]verbose              print additional information to the console
  -h, --help                  display help for command
"
`;

exports[`getCliOptions shows "migrate" command help text 1`] = `
"Usage: beachball migrate [options]

Help to migrate from beachball v2

Common options:
  -c, --config <value>  custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose        print additional information to the console
  -h, --help            display help for command
"
`;

exports[`getCliOptions shows "publish" command help text 1`] = `
"Usage: beachball publish [options]

Bump, publish to npm registry, and push updates back to the target branch

Options:
  -m, --message <value>       version bump commit description
  --[no-]bump                 bump versions during publish (default: true)
  --[no-]publish              publish to the npm registry (default: true)
  --[no-]push                 push changes back to the remote git branch (default: true)
  -y, --[no-]yes              skip publish confirmation prompts (default: true in CI, false locally)
  --git-timeout <num>         timeout in ms for git push operations
  --[no-]git-tags             create git tags for each published package version (default: true)

Change detection options:
  -b, --branch <value>        target branch from remote (default: the default remote branch)
  --since <value>             consider change files since this git ref (branch name, commit SHA)
  --[no-]fetch                fetch from the remote before determining changes (default: true)
  --depth <num>               for shallow clones: depth of git history to consider when fetching

Package filtering options:
  --scope <value...>          only consider package paths matching the pattern(s) (supports
                                "!negations")

Validation options:
  --disallowed-change-types <value...> - change types that are not allowed (choices: "none",
                                "prerelease", "prepatch", "patch", "preminor", "minor", "premajor",
                                "major")

Versioning options:
  --[no-]bump-deps            bump packages that depend on changed packages (default: true)
  --prerelease-prefix <value> prerelease prefix for packages that will receive a prerelease bump
  --[no-]keep-change-files    don't delete the change files from disk after bumping

npm options:
  -r, --registry <value>      npm registry (default: "https://registry.npmjs.org/")
  -n, --token <value>         npm auth token (prefer using NPM_TOKEN environment variable)
  -a, --auth-type <value>     npm auth type for NPM_TOKEN (choices: "authtoken", "password",
                                default: "authtoken")
  --npm-read-concurrency <num> - maximum concurrency for reading package versions from the registry
                                (default: 2)
  --timeout <num>             timeout in ms for npm operations (other than install)
  -t, --tag <value>           npm dist-tag for publishing (default: defaultNpmTag or "latest")
  --access <value>            npm publish access level (choices: "public", "restricted", default:
                                "restricted")
  --retries <num>             number of retries for an npm publish before failing (default: 3)
  --pack-to-path <value>      pack packages to tgz files under this path instead of publishing to
                                npm

Advanced options:
  --change-dir <value>        directory name or path to store change files (default: "change")
  --concurrency <num>         maximum concurrency for write operations (hook calls, npm publish,
                                default: 1)

Common options:
  -c, --config <value>        custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose              print additional information to the console
  -h, --help                  display help for command
"
`;

exports[`getCliOptions shows "sync" command help text 1`] = `
"Usage: beachball sync [options]

Synchronize package versions from the registry with local package.json versions

Options:
  --scope <value...>          only consider package paths matching the pattern(s) (supports
                                "!negations")
  --[no-]force                use the version from the registry even if it's older than local

npm options:
  -r, --registry <value>      npm registry (default: "https://registry.npmjs.org/")
  -n, --token <value>         npm auth token (prefer using NPM_TOKEN environment variable)
  -a, --auth-type <value>     npm auth type for NPM_TOKEN (choices: "authtoken", "password",
                                default: "authtoken")
  --npm-read-concurrency <num> - maximum concurrency for reading package versions from the registry
                                (default: 2)
  --timeout <num>             timeout in ms for npm operations (other than install)
  -t, --tag <value>           npm dist-tag to sync with (default: defaultNpmTag or "latest")

Common options:
  -c, --config <value>        custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose              print additional information to the console
  -h, --help                  display help for command
"
`;

exports[`getCliOptions shows top-level help text 1`] = `
"Usage: beachball <command> [options]

beachball vx.y.z - the sunniest version bumping tool

Commands:
  change                Create change files for this branch
  check                 Check whether a change file is needed for this branch
  bump                  Bump versions and generate changelogs, but don't commit or publish
  publish               Bump, publish to npm registry, and push updates back to the target branch
  sync                  Synchronize package versions from the registry with local package.json
                          versions
  config <get|list>     Get or list config settings (requires a sub-command)
  help [command]        display help for command

Common options:
  -c, --config <value>  custom beachball config path (default: cosmiconfig standard paths)
  --[no-]verbose        print additional information to the console
  -v, --version         output the version number
  -h, --help            display help for command
"
`;
